adding refresh after successful mark here

--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -96,6 +96,7 @@
         },
         complete: function(response) {
           console.log(response.responseText);
+          location.reload();
         }
       });
     } else {
