fixed styling on the google button and made manual override remove old entries

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   }
 
 </style>
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
 <div class="center_stuff">
 	<div id="info" class="hidden_div">
 		<div id="name"></div>
