changed a meta tag, added in missing emails and added icon to main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <style>
   .center_stuff {
     margin: 0 auto;
-    margin-top: 20%;
+    margin-top: 5%;
     width: 50%;
     text-align: center;
   }
@@ -19,6 +19,7 @@
 </style>
 <div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
 <div class="center_stuff">
+	<img src="/static/icon.png">
 	<div id="info" class="hidden_div">
 		<div id="name"></div>
 		<div id="email"></div>
@@ -34,6 +35,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
+<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
 <script>
 
   	var prof_id = null;
