--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -1,4 +1,5 @@
 <title>Week {{ week }}</title>
+<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
 <style>
   .center_stuff {
     margin: 0 auto;
