--- a/templates/all_entries.html
+++ b/templates/all_entries.html
@@ -1,5 +1,10 @@
 <title>All Check In's</title>
+
 <style>
+  html {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
   .center_stuff {
     margin: 0 auto;
     margin-top: 10%;
