--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 <title>Lightning Check In!</title>
 <style>
+  html {
+  	font-family: Arial, Helvetica, sans-serif;
+  }
+
   .center_stuff {
     margin: 0 auto;
     margin-top: 5%;
@@ -17,25 +21,26 @@
   }
 
 </style>
-<div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
 <div class="center_stuff">
 	<img src="/static/icon.png">
-	<div id="info" class="hidden_div">
+	<h2 class="element">BEAR CHECK IN</h2>
+	<div class="g-signin2 element" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
+	<div id="info" class="hidden_div element">
 		<div id="name"></div>
 		<div id="email"></div>
 	</div>
-	<div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
+	<div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;">
 		<span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
 	</div>
-    <div class="element" id="checkIn">Not Set</div>
     <div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
-    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px;">Find Location</span>
+    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px;">Check In!</span>
 	</div>
+	<div class="element" id="checkIn"></div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
-<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
+<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 <script>
 
   	var prof_id = null;
@@ -73,7 +78,7 @@
 							    data: JSON.stringify(data, null, '\t'),
 							    contentType: 'application/json;charset=UTF-8',
 							    success: function(result) {
-							        document.getElementById("checkIn").innerText = "Sent " + loc;
+							        document.getElementById("checkIn").innerText = "Checked In At:\n" + loc;
 							        console.log("Sent!");
 							    },
 							    complete: function(response) {
@@ -103,6 +108,8 @@
 		document.getElementById("name").innerText = profile.getName();
 		document.getElementById("email").innerText = profile.getEmail();
 		document.getElementById("info").classList.remove("hidden_div");
+		document.getElementById("signOut").classList.remove("hidden_div");
+
 
 		prof_id = googleUser.getAuthResponse().id_token;
 		if (profile.getEmail().endsWith("@berkeley.edu")) {
@@ -115,6 +122,8 @@
 		auth2.signOut().then(function () {
 	  		console.log('User signed out.');
 			document.getElementById("info").classList.add("hidden_div");
+			document.getElementById("signOut").classList.add("hidden_div");
+
 			prof_id = null;
 			email_temp = false;
 		});
