--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -1,6 +1,10 @@
 <title>Week {{ week }}</title>
-<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
+<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
+  html {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
   .center_stuff {
     margin: 0 auto;
     margin-top: 10%;
