--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   .center_stuff {
     margin: 0 auto;
     margin-top: 5%;
-    width: 50%;
+    width: 70%;
     text-align: center;
   }
 
@@ -24,18 +24,20 @@
 <div class="center_stuff">
 	<img src="/static/icon.png">
 	<h2 class="element">BEAR CHECK IN</h2>
-	<div class="g-signin2 element" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
+	<img class="element" src="/static/alpinebear_behance1.jpg">
+	<div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 10px auto;"></div>
 	<div id="info" class="hidden_div element">
 		<div id="name"></div>
 		<div id="email"></div>
 	</div>
-	<div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;">
+	<div id="signOut" onclick="signOut();" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;">
 		<span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
 	</div>
-    <div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
-    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px;">Check In!</span>
+    <div id="checkInButton" class="element abcRioButton abcRioButtonLightBlue hidden_div" onclick="findSelf()" style="height:36px;width:120px;">
+    	<img src="static/button.png">
+    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px; position: absolute; top: 50%; width: 100%; margin: 0 auto;">Check In!</span>
 	</div>
-	<div class="element" id="checkIn"></div>
+	<div class="element hidden_div" id="checkIn"></div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -109,6 +111,7 @@
 		document.getElementById("email").innerText = profile.getEmail();
 		document.getElementById("info").classList.remove("hidden_div");
 		document.getElementById("signOut").classList.remove("hidden_div");
+		document.getElementById("checkInButton").classList.remove("hidden_div");
 
 
 		prof_id = googleUser.getAuthResponse().id_token;
@@ -123,6 +126,7 @@
 	  		console.log('User signed out.');
 			document.getElementById("info").classList.add("hidden_div");
 			document.getElementById("signOut").classList.add("hidden_div");
+			document.getElementById("checkInButton").classList.add("hidden_div");
 
 			prof_id = null;
 			email_temp = false;
