--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
 	<div id="signOut" onclick="signOut();" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;">
 		<span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
 	</div>
-    <div id="checkInButton" class="element abcRioButton abcRioButtonLightBlue hidden_div" onclick="findSelf()" style="height:36px;width:120px;">
-    	<img src="static/button.png">
-    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px; position: absolute; top: 50%; width: 100%; margin: 0 auto;">Check In!</span>
+    <div id="checkInButton" class="element hidden_div" onclick="findSelf()">
+    	<img style="position: relative;" src="static/button.png">
+    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px; position: absolute; width: 100%; margin: 0 auto; left: 0; color: white;">Check In!</span>
 	</div>
-	<div class="element hidden_div" id="checkIn"></div>
+	<div class="element" id="checkIn"></div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
