--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <div class="center_stuff">
 	<img src="/static/icon.png">
 	<h2 class="element">BEAR CHECK IN</h2>
-	<img class="element" src="/static/alpinebear_behance1.jpg">
+	<img class="element" style="width: 80%;" src="/static/alpinebear_behance1.jpg">
 	<div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 10px auto;"></div>
 	<div id="info" class="hidden_div element">
 		<div id="name"></div>
@@ -35,7 +35,7 @@
 	</div>
     <div id="checkInButton" class="element hidden_div" onclick="findSelf()">
     	<img style="position: relative;" src="static/button.png">
-    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px; position: absolute; width: 100%; margin: 0 auto; left: 0; color: white;">Check In!</span>
+    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size: 2vh;line-height:34px; position: absolute; width: 100%; margin: 5px auto; left: 0; color: white;">Check In!</span>
 	</div>
 	<div class="element" id="checkIn"></div>
 </div>
