--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -30,29 +30,31 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
-<div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
-<div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;" onclick="signOut();">
-    <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
+<div class="center_stuff">
+  <div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
+  <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden div" style="height:36px;width:120px;" onclick="signOut();">
+      <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
+  </div>
+  <h2 class="element">Here</h2>
+  <table class="element">
+    {% for u in here %}
+    <tr>
+      <td>{{ u[1] }}</td>
+      <td>{{ u[2] }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+  <h2 class="element">Absent</h2>
+  <table class="element">
+    {% for u in absent %}
+    <tr>
+      <td>{{ u[1] }}</td>
+      <td>{{ u[2] }}</td>
+      <td><a href="#" onclick="here('{{ u[2] }}');">Mark as Here</a></td>
+    </tr>
+    {% endfor %}
+  </table>
 </div>
-<h2 class="center_stuff">Here</h2>
-<table class="center_stuff">
-  {% for u in here %}
-  <tr>
-    <td>{{ u[1] }}</td>
-    <td>{{ u[2] }}</td>
-  </tr>
-  {% endfor %}
-</table>
-<h2 class="center_stuff">Absent</h2>
-<table class="center_stuff">
-  {% for u in absent %}
-  <tr>
-    <td>{{ u[1] }}</td>
-    <td>{{ u[2] }}</td>
-    <td><a href="#" onclick="here('{{ u[2] }}');">Mark as Here</a></td>
-  </tr>
-  {% endfor %}
-</table>
 <script>
   var prof_id = null;
   var email_temp = false;
@@ -70,6 +72,7 @@
     prof_id = googleUser.getAuthResponse().id_token;
     if (admin.indexOf(profile.getEmail()) >= 0) {
       email_temp = true;
+      document.getElementById("signOut").classList.remove("hidden_div");
     }
   }
 
@@ -77,6 +80,7 @@
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
         console.log('User signed out.');
+        document.getElementById("signOut").classList.add("hidden_div");
       prof_id = null;
       email_temp = false;
     });
