adjusting spacing between elements on weekly page

--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -7,7 +7,7 @@
 
   .center_stuff {
     margin: 0 auto;
-    margin-top: 10%;
+    margin-top: 2%;
     text-align: center;
   }
 
@@ -35,7 +35,7 @@
   <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden div" style="height:36px;width:120px;" onclick="signOut();">
       <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
   </div>
-  <h2 class="element">Here</h2>
+  <h2 class="element" style="margin-top: 5%;">Here</h2>
   <table class="element">
     {% for u in here %}
     <tr>
@@ -44,7 +44,7 @@
     </tr>
     {% endfor %}
   </table>
-  <h2 class="element">Absent</h2>
+  <h2 class="element" style="margin-top: 5%;">Absent</h2>
   <table class="element">
     {% for u in absent %}
     <tr>
