--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -105,7 +105,7 @@
         },
         complete: function(response) {
           console.log(response.responseText);
-          // location.reload();
+          location.reload();
         }
       });
     } else {
