--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -93,7 +93,7 @@
             console.log("Sent!");
         },
         complete: function(response) {
-          console.log(response);
+          console.log(response.responseJSON);
         }
       });
     }
