--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -102,7 +102,7 @@
               var tr="<tr>";
               var td1="<td>"+list[i]["name"]+"</td>";
               var td2="<td>"+list[i]["email"]+"</td>";
-              var td3="<td>"+list[i]["time"]+"</td></tr>";
+              var td3="<td>"+list[i]["time"]+"</td>";
               var td4="<td><a href='#' onclick='remove("+list[i]["id"]+")'>Remove Check In</a></td></tr>";
 
              $("#mytable").append(tr+td1+td2+td3+td4); 
