--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -30,7 +30,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
+{% if week > 0}
+<a href="../week-{{ week - 1 }}" style="position: absolute; left: 2%; top: 2%;">Week {{ week - 1 }}</a>
+{% endif %}
+{% if week < 14 %}
+<a href="../week-{{ week + 1 }}" style="position: absolute; left: 2%; top: 2%;">Week {{ week + 1 }}</a>
+{% endif %}
 <div class="center_stuff">
+  <h1>Week {{ week }}</h1>
   <div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
   <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden div" style="height:36px;width:120px;" onclick="signOut();">
       <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
