--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -34,7 +34,9 @@
 {% if week != "0" %}
   <a href="../week-{{ pweek }}" style="position: absolute; left: 2%; top: 2%;">Week {{ pweek }}</a>
 {% endif %}
+{% if week != "14" %}
   <a href="../week-{{ nweek }}" style="position: absolute; right: 2%; top: 2%;">Week {{ nweek }}</a>
+{% endif %}
 </div>
 <div class="center_stuff">
   <h1>Week {{ week }}</h1>
