--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -40,7 +40,7 @@
 </div>
 <div class="center_stuff">
   <h1>Week {{ week }}</h1>
-  <div class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
+  <div id="signIn" class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
   <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden div" style="height:36px;width:120px;" onclick="signOut();">
       <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
   </div>
@@ -83,6 +83,8 @@
     console.log(profile.getEmail());
     prof_id = googleUser.getAuthResponse().id_token;
     document.getElementById("signOut").classList.remove("hidden_div");
+    document.getElementById("signIn").classList.add("hidden_div");
+
     if (admin.indexOf(profile.getEmail()) >= 0) {
       email_temp = true;
 
@@ -128,6 +130,8 @@
         console.log('User signed out.');
         document.getElementById("signOut").classList.add("hidden_div");
         document.getElementById("instructor").classList.add("hidden_div");
+        document.getElementById("signIn").classList.remove("hidden_div");
+
       prof_id = null;
       email_temp = false;
     });
