final styling changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,9 @@
 <div id="signOut" onclick="signOut();" class="abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px; position: absolute; top: 2%; right: 2%;">
 		<span href="#" style="font-size:13px;line-height:34px;" class="abcRioButtonContentWrapper">Sign out</span>
 </div>
-<a href="../week-{{ week }}" style="position: absolute; left: 2%; top: 2%;" class="abcRioButton abcRioButtonLightBlue">Check Attendance</a>
+<div href="../week-{{ week }}" style="position: absolute; left: 2%; top: 2%;" class="abcRioButton abcRioButtonLightBlue">
+	<span href="../week-{{ week }}">Check Attendance</span>
+</div>
 <div class="center_stuff">
 	<img src="/static/icon.png">
 	<p style="font-size: 3vh;" class="element">Bear Check In</p>
