--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -41,21 +41,12 @@
 <div class="center_stuff">
   <h1>Week {{ week }}</h1>
   <div id="signIn" class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
-  <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden div" style="height:36px;width:120px;" onclick="signOut();">
+  <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;" onclick="signOut();">
       <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
   </div>
   <div class="hidden_div" id="instructor">
     <h2 class="element" style="margin-top: 5%;">Instructor Check In's</h2>
   </div>
-  <h2 class="element" style="margin-top: 5%;">Here</h2>
-  <table class="element">
-    {% for u in here %}
-    <tr>
-      <td>{{ u[1] }}</td>
-      <td>{{ u[2] }}</td>
-    </tr>
-    {% endfor %}
-  </table>
   <h2 class="element" style="margin-top: 5%;">Absent</h2>
   <table class="element">
     {% for u in absent %}
@@ -63,6 +54,15 @@
       <td>{{ u[1] }}</td>
       <td>{{ u[2] }}</td>
       <td><a href="#" onclick="here('{{ u[2] }}');">Mark as Here</a></td>
+    </tr>
+    {% endfor %}
+  </table>
+  <h2 class="element" style="margin-top: 5%;">Here</h2>
+  <table class="element">
+    {% for u in here %}
+    <tr>
+      <td>{{ u[1] }}</td>
+      <td>{{ u[2] }}</td>
     </tr>
     {% endfor %}
   </table>
