--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <div id="signOut" onclick="signOut();" class="abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px; position: absolute; top: 2%; right: 2%;">
 		<span href="#" style="font-size:13px;line-height:34px;" class="abcRioButtonContentWrapper">Sign out</span>
 </div>
-<div href="../week-{{ week }}" style="position: absolute; left: 2%; top: 2%;" class="abcRioButton abcRioButtonLightBlue">
+<div href="../week-{{ week }}" style="height:36px;width:120px; position: absolute; left: 2%; top: 2%;" class="abcRioButton abcRioButtonLightBlue">
 	<span href="../week-{{ week }}">Check Attendance</span>
 </div>
 <div class="center_stuff">
