--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,6 @@
 <div id="signOut" onclick="signOut();" class="abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px; position: absolute; top: 2%; right: 2%;">
 		<span href="#" style="font-size:13px;line-height:34px;" class="abcRioButtonContentWrapper">Sign out</span>
 </div>
-<div href="../week-{{ week }}" style="height:36px;width:200px; position: absolute; left: 2%; top: 2%;" class="abcRioButton abcRioButtonLightBlue">
-	<span href="../week-{{ week }}" style="font-size:13px;line-height:34px;">Check Attendance</span>
-</div>
 <div class="center_stuff">
 	<img src="/static/icon.png">
 	<p style="font-size: 3vh;" class="element">Bear Check In</p>
@@ -41,6 +38,9 @@
     	<span class="abcRioButtonContentWrapper" style="font-size: 2vh;line-height:34px; position: absolute; width: 100%; margin: 5px auto; left: 0; color: white;">Check In</span>
 	</div>
 	<div class="element hidden_div" id="checkIn"></div>
+	<div href="../week-{{ week }}" style="height:36px;width:100%;" class="abcRioButton abcRioButtonLightBlue">
+		<span href="../week-{{ week }}" style="font-size:13px;line-height:34px;">Attendance Record</span>
+	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
