--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     	<span class="abcRioButtonContentWrapper" style="font-size: 2vh;line-height:34px; position: absolute; width: 100%; margin: 5px auto; left: 0; color: white;">Check In</span>
 	</div>
 	<div class="element hidden_div" id="checkIn"></div>
-	<div href="../week-{{ week }}" style="height:36px;width:100%;" class="abcRioButton abcRioButtonLightBlue">
+	<div href="../week-{{ week }}" style="height:36px;width:100%;" class="element abcRioButton abcRioButtonLightBlue">
 		<span href="../week-{{ week }}" style="font-size:13px;line-height:34px;">Attendance Record</span>
 	</div>
 </div>
