fixing attendance link

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
     	<span class="abcRioButtonContentWrapper" style="font-size: 2vh;line-height:34px; position: absolute; width: 100%; margin: 5px auto; left: 0; color: white;">Check In</span>
 	</div>
 	<div class="element hidden_div" id="checkIn"></div>
-	<div href="../week-{{ week }}" style="height:36px;width:100%;" class="element abcRioButton abcRioButtonLightBlue">
-		<span href="../week-{{ week }}" style="font-size:13px;line-height:34px;">Attendance Record</span>
+	<div onclick="location.href='../week-{{ week }}'" style="height:36px;width:200px;" class="element abcRioButton abcRioButtonLightBlue">
+		<span style="font-size:13px;line-height:34px;">Attendance Record</span>
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
