--- a/templates/all_entries.html
+++ b/templates/all_entries.html
@@ -1,5 +1,5 @@
 <title>All Check In's</title>
-
+<link rel="icon" href="/static/icon.png">
 <style>
   html {
     font-family: Arial, Helvetica, sans-serif;
