--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <title>Bear Check In!</title>
+<link rel="icon" href="/static/icon.png">
 <style>
   html {
   	font-family: Arial, Helvetica, sans-serif;
