adding date under week in weekly pages

--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -41,6 +41,7 @@
 </div>
 <div class="center_stuff">
   <h1>Week {{ week }}</h1>
+  <h2>{{ date }}</h2>
   <div id="signIn" class="g-signin2" data-onsuccess="onSignIn" style="width: 120px; margin: 0 auto;"></div>
   <div id="signOut" class="element abcRioButton abcRioButtonLightBlue hidden_div" style="height:36px;width:120px;" onclick="signOut();">
       <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
